add more localization items

--- a/DragonBonesDesignPanelLib/locale/en_US/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/en_US/resources.properties
@@ -50,6 +50,15 @@ pngs+xml=Zip (XML + PNGs)
 swf+json=Zip (JSON + SWF)
 png+json=Zip (JSON + PNG)
 pngs+json=Zip (JSON + PNGs)
+
+dataMerged=Data Merged
+dataAmf3=AMF(Binary)
+dataXml=XML
+dataJson=JSON
+textureSwf=DBSWF(Vector)
+texturePng=PNG
+texturePngs=PNGS
+
 exportscale=Export Scale
 backgroundColor=Background Color
 ok=OK
@@ -64,6 +73,7 @@ importFileTypeSelection=ImportFileType:
 fadeInTime=FadeInTime:
 millisecond=ms
 pixel=px
+
 dataFormat=Data Format:
 textureFormat=Texture Format:
 startBatchProcess=StartBatchProcess
