--- a/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
@@ -43,6 +43,7 @@ allLibraryItems=Tous éléments de la bibliothèque
 selectedItems=Eléments sélectionnés
 exportedData=Données exportées(SWF/PNG/Zip)
 spineData=Données Spine(Zip)
+
 swf=SWF (Data fusionné)
 png=PNG (Data fusionné)
 swf+xml=Zip (XML + SWF)
@@ -51,6 +52,15 @@ pngs+xml=Zip (XML + PNGs)
 swf+json=Zip (JSON + SWF)
 png+json=Zip (JSON + PNG)
 pngs+json=Zip (JSON + PNGs)
+
+dataMerged=Data Fusionné
+dataAmf3=AMF(Binaire)
+dataXml=XML
+dataJson=JSON
+textureSwf=DBSWF(Vecteur)
+texturePng=PNG
+texturePngs=PNGS
+
 exportscale=exporter échelle
 backgroundColor=Couleur de fond
 ok=OK
@@ -69,12 +79,12 @@ pixel=px
 dataFormat=Data Format:
 textureFormat=Texture Format:
 startBatchProcess=StartBatchProcess
-textureAtlasPath=Texture Atlas Path:
-skeletonDataFileName=Skeleton Data File Name:
-textureDataFileName=Texture Data File Name:
-textureFileName=Texture File Name:
-subTextureFolderName=Textures' Folder Name:
-skeletonDataName=Skeleton Data Name:
+textureAtlasPath=Texture Atlas Chemin:
+skeletonDataFileName=Skeleton données Nom de fichier:
+textureDataFileName=Texture fichier de données Nom:
+textureFileName=Texture Nom du fichier:
+subTextureFolderName=Dossier Nom de textures:
+skeletonDataName=Nom données Skeleton:
 
 advanced=Advanced
 source=Source:
