--- a/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
@@ -27,7 +27,7 @@ totalTimeScale=合計時間の倍率(%):
 blendingTime=混合時間(秒):
 keyFrameEase=キーフレームのイージング:
 loop=再生回数:
-autotween=
+autotween=自動トゥイーン
 play=再生
 stop=停止
 bonePanelTitle=ボーン - 
@@ -44,6 +44,7 @@ allLibraryItems=全てのライブラリアイテム
 selectedItems=選択したライブラリアイテム
 exportedData=書き出し済みファイル(SWF/PNG/Zip)
 spineData=Spineデータ(Zip)
+
 swf=SWF(データを含む)
 png=PNG(データを含む)
 swf+xml=Zip(XML + SWF)
@@ -52,6 +53,15 @@ pngs+xml=Zip(XML + 複数PNG)
 swf+json=Zip(JSON + SWF)
 png+json=Zip(JSON + PNG)
 pngs+json=Zip(JSON + 複数PNG)
+
+dataMerged=統合データ
+dataAmf3=AMF(バイナリー)
+dataXml=XML
+dataJson=JSON
+textureSwf=DBSWF(ベクトル)
+texturePng=PNG
+texturePngs=PNGS
+
 exportscale=書き出しの倍率
 backgroundColor=背景色
 ok=OK
@@ -68,7 +78,7 @@ millisecond=ms
 pixel=px
 
 dataFormat=データフォーマット:
-textureFormat=Texture Format:テクスチャフォーマット
+textureFormat=テクスチャフォーマット:
 startBatchProcess=StartBatchProcess
 textureAtlasPath=テクスチャアトラスのパス:
 skeletonDataFileName=スケルトンデータファイル名:
