--- a/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
@@ -44,6 +44,7 @@ allLibraryItems=所有库元件
 selectedItems=选中的库元件
 exportedData=导出的数据(SWF/PNG/Zip)
 spineData=Spine的数据(Zip)
+
 swf=SWF (包含数据)
 png=PNG (包含数据)
 swf+xml=Zip (XML + SWF)
@@ -52,8 +53,17 @@ pngs+xml=Zip (XML + PNGs)
 swf+json=Zip (JSON + SWF)
 png+json=Zip (JSON + PNG)
 pngs+json=Zip (JSON + PNGs)
-backgroundColor=背景颜色
+
+dataMerged=集成数据
+dataAmf3=AMF(二进制)
+dataXml=XML
+dataJson=JSON
+textureSwf=DBSWF(矢量图)
+texturePng=PNG
+texturePngs=PNGS
+
 exportscale=导出缩放比
+backgroundColor=背景颜色
 ok=确定
 save=保存
 cancel=取消
