add advanced drop down panel in export panel

--- a/DragonBonesDesignPanelLib/locale/en_US/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/en_US/resources.properties
@@ -34,9 +34,9 @@ playDelay=Play Delay(%):
 importLabel=Import:
 textureSetting=Texture Setting
 layoutAlgorithm=Layout Algorithm:
-size=Size:
+size=Texture Atlas Size:
 autoSize=AutoSize
-padding=Padding:
+padding=Texture Padding:
 exportLabel=Export:
 allLibraryItems=All Library Items
 selectedItems=Selected Items
@@ -61,6 +61,7 @@ texturePngs=PNGS
 
 exportscale=Export Scale
 backgroundColor=Background Color
+advanceOption=Advanced Options
 ok=OK
 save=Save
 cancel=Cancel
