--- a/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
@@ -35,9 +35,9 @@ playDelay=Temporisation de lecture(%):
 importLabel=Importer:
 textureSetting=Paramétrage de la texture
 layoutAlgorithm=Algorithme de layout:
-size=Taille :
+size=Texture Atlas Taille :
 autoSize=Taille automatique
-padding=Remplissage:
+padding=Texture Remplissage:
 exportLabel=Exporter:
 allLibraryItems=Tous éléments de la bibliothèque
 selectedItems=Eléments sélectionnés
@@ -63,6 +63,7 @@ texturePngs=PNGS
 
 exportscale=exporter échelle
 backgroundColor=Couleur de fond
+advanceOption=Options avancées
 ok=OK
 save=Sauver
 cancel=Annuler
