--- a/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
@@ -36,9 +36,9 @@ playDelay=再生ディレイ(%):
 importLabel=読み込み:
 textureSetting=テクスチャ設定
 layoutAlgorithm=レイアウトアルゴリズム:
-size=サイズ:
+size=テクスチャアトラスサイズ:
 autoSize=自動サイズ設定
-padding=パディング:
+padding=テクスチャパディング:
 exportLabel=書き出し:
 allLibraryItems=全てのライブラリアイテム
 selectedItems=選択したライブラリアイテム
@@ -64,6 +64,7 @@ texturePngs=PNGS
 
 exportscale=書き出しの倍率
 backgroundColor=背景色
+advanceOption=高級オプション
 ok=OK
 save=保存
 cancel=キャンセル
