--- a/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
@@ -36,9 +36,9 @@ playDelay=播放延时(%):
 importLabel=导入:
 textureSetting=纹理设置
 layoutAlgorithm=排列算法:
-size=尺寸:
+size=纹理集尺寸:
 autoSize=自适应
-padding=间距:
+padding=纹理间距:
 exportLabel=导出:
 allLibraryItems=所有库元件
 selectedItems=选中的库元件
@@ -64,6 +64,7 @@ texturePngs=PNGS
 
 exportscale=导出缩放比
 backgroundColor=背景颜色
+advanceOption=高级选项
 ok=确定
 save=保存
 cancel=取消
