design panel support export relative data

--- a/DragonBonesDesignPanelLib/locale/en_US/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/en_US/resources.properties
@@ -42,6 +42,7 @@ allLibraryItems=All Library Items
 selectedItems=Selected Items
 exportedData=Exported Data(SWF/PNG/Zip)
 spineData=Spine Data(Zip)
+
 swf=SWF (Data Merged)
 png=PNG (Data Merged)
 swf+xml=Zip (XML + SWF)
@@ -58,6 +59,8 @@ dataJson=JSON
 textureSwf=DBSWF(Vector)
 texturePng=PNG
 texturePngs=PNGS
+dataTypeAbsolute=Global
+dataTypeRelative=Parent
 
 exportscale=Export Scale
 backgroundColor=Background Color
@@ -77,6 +80,7 @@ pixel=px
 
 dataFormat=Data Format:
 textureFormat=Texture Format:
+dataType=Data Coordinate:
 startBatchProcess=StartBatchProcess
 textureAtlasPath=Texture Atlas Path:
 skeletonDataFileName=Skeleton Data File Name:
