--- a/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
@@ -20,7 +20,6 @@ source=Source
 target=Cible
 frameRate=Fréquence d’images:
 behaviorPanelTitle=Comportement - 
-totalTime=Durées totales(sec):
 totalTimeSec=Durées totales(sec):
 totalTimeScale=Durées totales échelle(%):
 blendingTime=Les temps de mélange(sec):
@@ -60,6 +59,8 @@ dataJson=JSON
 textureSwf=DBSWF(Vecteur)
 texturePng=PNG
 texturePngs=PNGS
+dataTypeAbsolute=Mondial
+dataTypeRelative=Mère
 
 exportscale=exporter échelle
 backgroundColor=Couleur de fond
@@ -79,6 +80,7 @@ pixel=px
 
 dataFormat=Data Format:
 textureFormat=Texture Format:
+dataType=Data Coordonnées:
 startBatchProcess=StartBatchProcess
 textureAtlasPath=Texture Atlas Chemin:
 skeletonDataFileName=Skeleton données Nom de fichier:
