--- a/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
@@ -20,8 +20,6 @@ source=コピー元
 target=コピー先
 frameRate=フレームレート:
 behaviorPanelTitle=モーション - 
-totalFrames=フレーム数:
-switchTweenFrames=トゥイーンフレームを切り替え:
 totalTimeSec=合計時間(秒):
 totalTimeScale=合計時間の倍率(%):
 blendingTime=混合時間(秒):
@@ -61,6 +59,8 @@ dataJson=JSON
 textureSwf=DBSWF(ベクトル)
 texturePng=PNG
 texturePngs=PNGS
+dataTypeAbsolute=世界の
+dataTypeRelative=父の
 
 exportscale=書き出しの倍率
 backgroundColor=背景色
@@ -80,6 +80,7 @@ pixel=px
 
 dataFormat=データフォーマット:
 textureFormat=テクスチャフォーマット:
+dataType=データ座標係:
 startBatchProcess=StartBatchProcess
 textureAtlasPath=テクスチャアトラスのパス:
 skeletonDataFileName=スケルトンデータファイル名:
