--- a/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
@@ -20,8 +20,6 @@ source=源
 target=目标
 frameRate=帧频:
 behaviorPanelTitle=动作 - 
-totalFrames=总帧数:
-switchTweenFrames=切换补间帧数:
 totalTimeSec=总时间(秒):
 totalTimeScale=总时间缩放(%):
 blendingTime=混合时间(秒):
@@ -61,6 +59,8 @@ dataJson=JSON
 textureSwf=DBSWF(矢量图)
 texturePng=PNG
 texturePngs=PNGS
+dataTypeAbsolute=世界
+dataTypeRelative=父
 
 exportscale=导出缩放比
 backgroundColor=背景颜色
@@ -80,6 +80,7 @@ pixel=像素
 
 dataFormat=数据格式:
 textureFormat=纹理格式:
+dataType=数据坐标系:
 startBatchProcess=开始批处理
 textureAtlasPath=纹理集路径:
 skeletonDataFileName=骨架数据文件名:
