support compress data

--- a/DragonBonesDesignPanelLib/locale/en_US/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/en_US/resources.properties
@@ -61,6 +61,10 @@ texturePng=PNG
 texturePngs=PNGS
 dataTypeAbsolute=Global
 dataTypeRelative=Parent
+compressData=Compress Data
+dataTypeAbsoluteToolTip=Using global coordinate, perfect compatible with older version libraries, but file size will be bigger.
+dataTypeRelativeToolTip=Using parent coordinate, the exported data file can be further compressed, but it will not be older version libraries compatible and its skeleton hierarchy will not be editable after opened by DesignPanel.
+compressDataToolTip=Enable compress data can great reduce exported data file size, but the exported data file will not be older version libraries compatible.
 
 exportscale=Export Scale
 backgroundColor=Background Color
