--- a/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
@@ -61,6 +61,10 @@ texturePng=PNG
 texturePngs=PNGS
 dataTypeAbsolute=Mondial
 dataTypeRelative=Mère
+compressData=Comprimé Data
+dataTypeAbsoluteToolTip=L'utilisation globale de coordonnées, parfaitement compatible avec l'ancienne version de la bibliothèque, mais la taille du fichier sera encore plus grand.
+dataTypeRelativeToolTip=L'utilisation de coordonnées de l'objet parent, le document d'exportation de données peut en outre être comprimé, mais n'est pas compatible avec la base de l'ancienne version, le squelette de la hiérarchie ne sera pas ouvert designpanel après l'édition.
+compressDataToolTip=De sorte que la compression des données, on peut considérablement réduire la taille du fichier de données d'exportation, mais le fichier de données d'exportation ne sera pas compatible avec une ancienne version de la bibliothèque.
 
 exportscale=exporter échelle
 backgroundColor=Couleur de fond
