rename the relative property in datafile to "isGlobal"

--- a/DragonBonesDesignPanelLib/locale/en_US/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/en_US/resources.properties
@@ -55,7 +55,7 @@ pngs+json=Zip (JSON + PNGs)
 dataMerged=Data Merged
 dataAmf3=AMF(Binary)
 dataXml=XML
-dataJson=JSON
+dataJson=JSON(Support Egret Engine)
 textureSwf=DBSWF(Vector)
 texturePng=PNG
 texturePngs=PNGS
