--- a/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/fr_FR/resources.properties
@@ -55,7 +55,7 @@ pngs+json=Zip (JSON + PNGs)
 dataMerged=Data Fusionné
 dataAmf3=AMF(Binaire)
 dataXml=XML
-dataJson=JSON
+dataJson=JSON(Soutenir Egret Moteur)
 textureSwf=DBSWF(Vecteur)
 texturePng=PNG
 texturePngs=PNGS
