--- a/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
@@ -55,7 +55,7 @@ pngs+json=Zip(JSON + 複数PNG)
 dataMerged=統合データ
 dataAmf3=AMF(バイナリー)
 dataXml=XML
-dataJson=JSON
+dataJson=JSON(支持Egretエンジン)
 textureSwf=DBSWF(ベクトル)
 texturePng=PNG
 texturePngs=PNGS
