--- a/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
@@ -55,7 +55,7 @@ pngs+json=Zip (JSON + PNGs)
 dataMerged=集成数据
 dataAmf3=AMF(二进制)
 dataXml=XML
-dataJson=JSON
+dataJson=JSON(支持Egret引擎)
 textureSwf=DBSWF(矢量图)
 texturePng=PNG
 texturePngs=PNGS
