Disable bone edit if imported data is based on parent

--- a/DragonBonesDesignPanelLib/locale/en_US/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/en_US/resources.properties
@@ -63,6 +63,7 @@ dataTypeAbsolute=Global
 dataTypeRelative=Parent
 compressData=Compress Data
 dataTypeAbsoluteToolTip=Using global coordinate, perfect compatible with older version libraries, but file size will be bigger.
+dataTypeAbsoluteDisableToolTip=Because the Imported data is based on parent coordinate. It cannot be exported to global coordinate.
 dataTypeRelativeToolTip=Using parent coordinate, the exported data file can be further compressed, but it will not be older version libraries compatible and its skeleton hierarchy will not be editable after opened by DesignPanel.
 compressDataToolTip=Enable compress data can great reduce exported data file size, but the exported data file will not be older version libraries compatible.
 
