--- a/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/zh_CN/resources.properties
@@ -63,6 +63,7 @@ dataTypeAbsolute=世界
 dataTypeRelative=父
 compressData=压缩数据
 dataTypeAbsoluteToolTip=世界坐标数据能够完美兼容老板本的库，但是数据文件尺寸会比较大。
+dataTypeAbsoluteDisableToolTip=因为导入的是基于父坐标系的数据，所以无法导出为基于世界坐标系的数据。
 dataTypeRelativeToolTip=父坐标数据能够最大限度的压缩数据尺寸，但是可能会和老板本的库不兼容，并且导出的数据将不支持在DesignPanel中再次修改骨架关系。
 compressDataToolTip=开启数据压缩能够最大限度的压缩数据尺寸，但是可能回合老版本的库不兼容。
 
