--- a/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
+++ b/DragonBonesDesignPanelLib/locale/ja_JP/resources.properties
@@ -63,6 +63,7 @@ dataTypeAbsolute=世界の
 dataTypeRelative=父の
 compressData=圧縮データ
 dataTypeAbsoluteToolTip=世界の座標のデータが完璧に互換ボス本の倉庫、しかしデータファイルサイズが大きい。
+dataTypeAbsoluteDisableToolTip=導入に父からの座標係のデータに基づいて、ないからエクスポートを世界の座標係のデータ.
 dataTypeRelativeToolTip=父の座標のデータが最大限の圧縮データサイズで、でもそれは上司と本のライブラリには対応していない、そしてエクスポートしたデータを支持しないでDesignPanelで再び改正骨格関係。
 compressDataToolTip=開くデータ圧縮できる最大限の圧縮データサイズがターンの古いバージョンのライブラリには対応していない。
 
